--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
-  background: #0c1022;
-  color: #fff;
+:root {
+  --second-color: #00bfff;
+  --third-color: #f06; /* Định nghĩa biến --main-color với giá trị là màu #00bfff */
 }
 .header {
   position: fixed;
@@ -48,6 +48,8 @@ body {
   -webkit-background-clip: text;
 }
 .home {
+  background: #0c1022;
+  color: #fff;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -87,8 +89,8 @@ body {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
-  height: 50px;
+  width: 160px;
+  height: 60px;
   border-radius: 40px;
   font-size: 20px;
   color: #fff;
@@ -298,13 +300,113 @@ body {
     transform: translateY(0);
   }
 }
-@keyframes circleRoate{
-  0%{
+@keyframes circleRoate {
+  0% {
     transform: rotate(0);
   }
-  100%{
+  100% {
     transform: rotate(360deg);
   }
 }
+.about {
+  background: #080c18;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding-bottom: 6rem;
+}
+.heading {
+  font-size: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+.about-img {
+  position: relative;
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-img img {
+  width: 40%;
+  border-radius: 50%;
+  border: 0.2rem solid #00bfff;
+}
+span {
+  background: linear-gradient(45deg, #f06, #3cf);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+.about-content {
+  text-align: center;
+}
+.about-content h3 {
+  font-size: 2.6rem;
+}
+.about-content p {
+  font-size: 1.6rem;
+  margin: 0% 10% 0% 10%;
+}
+.btn-box btns {
+  display: inline-block;
+  width: 15rem;
+}
+.education {
+  background: #0c1022;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: auto;
+  padding-bottom: 5rem;
+}
+.education .education-row {
+  margin-left: 5%;
+  margin-right: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+.education .education-column {
+  flex: 1 1 40rem;
+}
+.education-column .title {
+  font-size: 2.5rem;
+  margin: 0 0 1.5rem 2rem;
+}
+.education-column .education-box {
+  border-left: 0.2rem solid var(--second-color);
+}
+.education-box .education-content {
+  position: relative;
+  padding-left: 2rem;
+}
+.education-content .content {
+  position: relative;
+  padding: 1.5rem;
+  border: 0.2rem solid var(--second-color);
+  border-radius: 0.6rem;
+  margin-bottom: 2rem;
+}
+.education-content .content .year {
+  font-size: 2.5rem;
+  background: linear-gradient(45deg, #f06, #3cf);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  padding-bottom: 2rem;
+}
+.education-content .content h3{
+  font-size: 1.5rem;
+  padding-bottom: 0.5rem;
+}
+.education-content .content p{
+  font-size: 1rem;
 
-
+}
