--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-@import url("http: //fonts.googleapos.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
+}
+html {
+  font-size: 75%;
+  overflow-x: hidden;
 }
 :root {
   --second-color: #00bfff;
-  --third-color: #f06; /* Định nghĩa biến --main-color với giá trị là màu #00bfff */
+  --third-color: #f06;
+  --four-color: #cccccc; /* Định nghĩa biến --main-color với giá trị là màu #00bfff */
 }
+/* Header design --> */
 .header {
   position: fixed;
   top: 0;
@@ -21,6 +31,7 @@
   align-items: center;
   z-index: 100;
 }
+/* Logo design --> */
 .logo {
   font-size: 25px;
   color: #fff;
@@ -30,6 +41,8 @@
   opacity: 0;
   animation: slideTop 1s ease forwards;
 }
+
+/* Navbar design --> */
 .navbar a {
   display: inline-block;
   font-size: 18px;
@@ -47,6 +60,8 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+
+/* Home design -->*/
 .home {
   background: #0c1022;
   color: #fff;
@@ -308,6 +323,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* About design-->*/
 .about {
   background: #080c18;
   color: #fff;
@@ -326,17 +343,20 @@
 }
 .about-img {
   position: relative;
-  width: 20rem;
-  height: 20rem;
+  width: 30rem;
+  height: 30rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+  animation-delay: 2.1s, 3.1s;
 }
 .about-img img {
   width: 40%;
   border-radius: 50%;
-  border: 0.2rem solid #00bfff;
+  border: 0.2rem solid var(--second-color);
 }
 span {
   background: linear-gradient(45deg, #f06, #3cf);
@@ -357,6 +377,8 @@ span {
   display: inline-block;
   width: 15rem;
 }
+
+/* Education design -->*/
 .education {
   background: #0c1022;
   color: #fff;
@@ -388,13 +410,40 @@ span {
   position: relative;
   padding-left: 2rem;
 }
+.education-box .education-content::before {
+  content: "";
+  position: absolute;
+  left: -1.1rem;
+  top: 0;
+  width: 2rem;
+  height: 2rem;
+  background: var(--second-color);
+  border-radius: 50%;
+}
 .education-content .content {
   position: relative;
   padding: 1.5rem;
   border: 0.2rem solid var(--second-color);
   border-radius: 0.6rem;
   margin-bottom: 2rem;
+  overflow: hidden;
 }
+.education-content .content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: rgba(200, 200, 200, 0.5);
+  z-index: 1;
+  transition: width 0.5s; /* Apply transition on width change */
+}
+
+.education-content .content:hover::before {
+  width: 100%;
+}
+
 .education-content .content .year {
   font-size: 2.5rem;
   background: linear-gradient(45deg, #f06, #3cf);
@@ -402,11 +451,31 @@ span {
   -webkit-background-clip: text;
   padding-bottom: 2rem;
 }
-.education-content .content h3{
+.education-content .content h3 {
   font-size: 1.5rem;
   padding-bottom: 0.5rem;
 }
-.education-content .content p{
+.education-content .content p {
   font-size: 1rem;
+}
 
+/* Skills design -->*/
+.skills {
+  background: #080c18;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding-bottom: 6rem;
+}
+.skills .skills-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+.skills-column .title {
+  font-size: 2.5rem;
+  margin: 0 0 1.5rem;
 }
