--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ html {
   align-items: center;
   z-index: 100;
 }
+.header.sticky {
+  background: #0c1022;
+}
 /* Logo design --> */
 .logo {
   font-size: 25px;
@@ -498,7 +501,7 @@ span {
   left: 0;
   width: 0;
   height: 100%;
-  background:var(--bg-color);
+  background: var(--bg-color);
   z-index: -1;
   transition: 0.5s;
 }
@@ -549,4 +552,74 @@ span {
 }
 .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
   width: 75%;
+}
+
+/* Portfolio design --> */
+.portfolio {
+  background: #0c1022;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: auto;
+  padding-bottom: 5rem;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: #080c18;
+  color: #fff;
+}
+.footer-text p {
+  font-size: 1.6rem;
+}
+.footer-iconTop a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(45deg, #f06, #3cf);
+  border-radius: 50%;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+  margin: 20px 0;
+  z-index: 1;
+}
+.footer-iconTop a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #f06, #3cf);
+  border-radius: 50%;
+  z-index: -1;
+  transition: 0.5s ease;
+}
+.footer-iconTop a:hover::before {
+  filter: blur(5px);
+}
+.footer-iconTop a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #0c1022;
+  border-radius: 50%;
+  transform: scale(0.88);
+  z-index: -1;
+  transition: 0.5s ease;
+}
+.footer-iconTop a:hover::after {
+  transform: scale(0);
+}
+.footer-iconTop a i {
+  font-size: 2.4rem;
+  color: white;
 }
