--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html {
 .header.sticky {
   background: #0c1022;
 }
+
 /* Logo design --> */
 .logo {
   font-size: 25px;
@@ -65,6 +66,9 @@ html {
   -webkit-background-clip: text;
 }
 
+.navbar i {
+  display: none;
+}
 /* Home design -->*/
 .home {
   background: #0c1022;
@@ -656,29 +660,28 @@ span {
     padding: 2rem 4%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 500px) {
   html {
     font-size: 55%;
   }
   .header {
-    padding: 0.5rem;
+    padding: 2%;
     background: #0c1022;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .logo {
+  #menu-icon {
+    display: block;
   }
   .navbar {
-    display: flex;
     position: absolute;
     top: 100%;
     left: 0;
-    padding: 1rem;
+    width: 100%;
+    padding: 1rem 4%;
+    background: #0c1022;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  }
-  .navbar a {
-    margin-left: 5%;
   }
   .home {
     flex-direction: column;
@@ -690,16 +693,14 @@ span {
     order: 1;
     margin-top: 50%;
     font-size: 2rem;
+    align-items: center;
+    text-align: center;
+    margin-left: 4%;
   }
   .home-sci {
     display: none;
   }
-  .home-content {
-    align-items: center;
-    text-align: center;
-  }
   .home-content h1 {
-    margin-top: 2%;
     font-size: 3.5rem;
   }
   .home-content p {
@@ -707,6 +708,5 @@ span {
   }
   .home-content a {
     font-size: 2rem;
-    margin-bottom: 30%;
   }
 }
